# hsc_motion

alice_action_editor/: CMakeLists.txt  package.xml
alice_action_editor/config/: config_mirror_joint.yaml  editor_script.yaml
alice_action_editor/include/alice_action_editor/: action_editor.h
alice_action_editor/launch/: alice_action_editor.launch  alice_action_editor_gazebo.launch
alice_action_editor/src/: action_editor.cpp  main.cpp
alice_action_module/: CMakeLists.txt  package.xml
alice_action_module/include/alice_action_module/: action_file_define.h  action_module.h
alice_action_module/src/: action_module.cpp
alice_action_script_player/: CMakeLists.txt  package.xml
alice_action_script_player/script/: alice_action_script.yaml
alice_action_script_player/src/: action_script_player.cpp
alice_base_module/: CMakeLists.txt  package.xml
alice_base_module/data/: ini_pose_1.yaml  ini_pose_2.yaml  ini_pose_3.yaml
alice_base_module/include/alice_base_module/: base_module.h  base_module_state.h
alice_base_module/src/: base_module.cpp  base_module_state.cpp
alice_kinematics_dynamics/data/: kin_dyn_1.yaml  kin_dyn_3.yaml
alice_kinematics_dynamics/include/alice_kinematics_dynamics/: kinematics_dynamics.h
alice_kinematics_dynamics/src/: kinematics_dynamics.cpp
alice_manager/: CMakeLists.txt  package.xml
alice_manager/config/: alice_1.robot  alice_2.robot  alice_3.robot  dxl_init_2.yaml  dxl_init_2_backup.yaml  dxl_init_3.yaml  dxl_init_3_backup.yaml  offset_1.yaml  offset_2.yaml  offset_3.yaml
alice_manager/launch/: .alice_manager.launch.swp  alice_manager.launch  alice_manager_footstep.launch  alice_manager_gazebo_test_1.launch  alice_manager_gazebo_test_2.launch  alice_manager_gazebo_test_3.launch
alice_manager/src/: alice_manager_node.cpp
alice_online_walking_module/: CMakeLists.txt
alice_online_walking_module/include/alice_online_walking_module/: alice_online_walking.h  online_walking_module.h
alice_online_walking_module/src/: alice_online_walking.cpp  online_walking_module.cpp
alice_torso_module/: CMakeLists.txt  package.xml
alice_torso_module/include/alice_torso_module/: alice_torso_module.h  fifth_order_trajectory_generator.h  pid_controller.h
alice_torso_module/src/: alice_torso_module.cpp  fifth_order_trajectory_generator.cpp  pid_controller.cpp
alice_torso_test_module/: CMakeLists.txt  package.xml
alice_torso_test_module/include/alice_torso_test_module/: alice_torso_test_module.h  fifth_order_trajectory_generator.h  pid_controller.h
alice_torso_test_module/src/: alice_torso_test_module.cpp  fifth_order_trajectory_generator.cpp  pid_controller.cpp
alice_tuning_module/: CMakeLists.txt  package.xml
alice_tuning_module/include/alice_tuning_module/: tuning_data.h  tuning_module.h  tuning_module_state.h
alice_tuning_module/src/: tuning_data.cpp  tuning_module.cpp  tuning_module_state.cpp
alice_upper_body_module/: CMakeLists.txt  package.xml
alice_upper_body_module/data/: upper_body_arm_1.yaml  upper_body_arm_2.yaml  upper_body_arm_3.yaml
alice_upper_body_module/include/alice_upper_body_module/: alice_upper_body_module.h
alice_upper_body_module/src/: alice_upper_body_module.cpp
alice_walking_test_module/: CMakeLists.txt  package.xml
alice_walking_test_module/include/alice_walking_test_module/: alice_walking_test.h  walking_test_module.h
alice_walking_test_module/src/: alice_walking_test.cpp  walking_test_module.cpp
