<?xml version="1.0"?>
<package>
  <name>alice_base_module</name>
  <version>0.0.0</version>
  <description>The alice_base_module package</description>

  <maintainer email="heroehs@todo.todo">heroehs</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>  
  <build_depend>roslib</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>robotis_framework_common</build_depend>
  <build_depend>robotis_controller_msgs</build_depend>
  <build_depend>robotis_math</build_depend>
  <build_depend>heroehs_math</build_depend>
  <build_depend>alice_kinematics_dynamics</build_depend>
  <build_depend>yaml-cpp</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>boost</build_depend>

  <run_depend>roscpp</run_depend>  
  <run_depend>roslib</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>cmake_modules</run_depend>
  <run_depend>robotis_framework_common</run_depend>
  <run_depend>robotis_controller_msgs</run_depend>
  <run_depend>robotis_math</run_depend>
  <run_depend>heroehs_math</run_depend>
  <run_depend>alice_kinematics_dynamics</run_depend>
  <run_depend>yaml-cpp</run_depend>
  <run_depend>eigen</run_depend>
  <run_depend>boost</run_depend>


  <export>
  </export>
</package>
