<?xml version="1.0"?>
<package>
  <name>alice_manager</name>
  <version>0.0.0</version>
  <description>The alice_manager package</description>

  <maintainer email="robotemperor@todo.todo">robotemperor</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>dynamixel_sdk</build_depend>
  <build_depend>robotis_framework_common</build_depend>
  <build_depend>robotis_device</build_depend>
  <build_depend>robotis_controller</build_depend>
  <build_depend>robotis_controller_msgs</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>robotis_math</build_depend>
  <build_depend>heroehs_math</build_depend>

  <build_depend>alice_base_module</build_depend>
  <build_depend>alice_action_module</build_depend>
  <build_depend>alice_tuning_module</build_depend>
  <build_depend>alice_online_walking_module</build_depend>
  <build_depend>alice_walking_test_module</build_depend>
  <!--build_depend>alice_leg_module</build_depend-->
  <!--build_depend>alice_balance_control</build_depend-->
  <build_depend>alice_torso_module</build_depend>
  <build_depend>alice_upper_body_module</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>robotis_controller</run_depend>


  <export>
  </export>
</package>
