<?xml version="1.0"?>
<package>
  <name>alice_torso_test_module</name>
  <version>0.0.0</version>
  <description>The alice_torso_module package</description>

  <maintainer email="roscore@kakao.com">roscore</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>alice_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>diagnostic_msgs</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>robotis_math</build_depend>
  <build_depend>robotis_framework_common</build_depend>
  <build_depend>robotis_controller_msgs</build_depend>
  <build_depend>heroehs_math</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>boost</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>alice_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>diagnostic_msgs</run_depend>
  <run_depend>cmake_modules</run_depend>
  <run_depend>robotis_math</run_depend>
  <run_depend>robotis_framework_common</run_depend>
  <run_depend>robotis_controller_msgs</run_depend>
  <run_depend>heroehs_math</run_depend>
  <run_depend>eigen</run_depend>
  <run_depend>boost</run_depend>

  <export>
  </export>
</package>
