<?xml version="1.0"?>
<package format="2">
  <name>alice_tuning_module</name>
  <version>0.2.1</version>
  <description>
    The alice_tuning_module package
  </description> 
  <maintainer email="heroehs@todo.todo">heroehs</maintainer>  
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>robotis_controller_msgs</depend>
  <depend>alice_tuning_module_msgs</depend>
  <depend>cmake_modules</depend>
  <depend>robotis_framework_common</depend>
  <depend>robotis_device</depend>
  <depend>robotis_math</depend>
  <depend>alice_kinematics_dynamics</depend>
  <depend>boost</depend>
  <depend>eigen</depend>
  <depend>yaml-cpp</depend>
</package>
